--- a/add-contact.html
+++ b/add-contact.html
@@ -18,6 +18,7 @@
          <input type="text" name="email" id="email"><br/>
          <label for="email">Email</label>
          <input type="text" name="email" id="email"><br/>
+         <label for="avatar">Select a file</label>
          <input type="file" name="avatar" id="avatar"><br/>
          <button type="submit" id="submitForm">Submit</button>
     </form>
